<resources>
    <string name="app_name" translatable="false">UpAudio</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="empty_podcast_list_message">Sorry, we could not find any podcasts. Please add them to the Podcast file on your device</string>
    <string name="sign_in_prompt">Please sign-in to use notes</string>

    <string name="note_added_message">UpAudio added</string>
    <string name="edit_note">Edit</string>

    <string name="note_title">UpAudio Name: </string>
    <string name="note_message">Note: </string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="start_time_and_val">Start Time: %d</string>
    <string name="end_time_and_val">End Time: %d</string>
    <string name="add_note">Add a note</string>
    <string name="save">Save UpAudio</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="error_no_files">Sorry, we found no files</string>
    <string name="add_note_content_description">Start recording a note</string>
    <string name="share">share</string>
    <string name="send_to">Send to</string>
    <string name="file_name">Note made from file:</string>
    <string name="sorry_not_signed_in">Sorry, you are not signed in so you cannot use notes</string>
    <string name="sign_in_action">Sign in</string>
    <string name="new_note">New Note</string>
    <string name="open_notes">Open notes</string>
</resources>
