<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.upaudio.armi.upaudio.ui.NoteEditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/title_text_edit"
            android:text="@string/note_title" />

        <EditText
            android:id="@+id/title_text_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:id="@+id/start_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/note_text_edit"
        android:text="@string/note_message" />

    <EditText
        android:id="@+id/note_text_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top|start"
        android:hint="@string/add_note"
        android:inputType="text" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save" />

</LinearLayout>
